<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="S."
        android:textColor="#ee6658"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/header_setup_bank_account"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/txtLogo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtLabelPan"
        android:layout_marginTop="50dp"
        android:text="@string/label_pan"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/txtHeader"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputPanLayout"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"

        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelPan">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPan"
            android:inputType="textCapCharacters"
            android:maxLength="10"
            android:maxLines="1"
            android:singleLine="true"
            android:imeOptions="actionNext"
            android:digits="QWERTYUIOPASDFGHJKLZXCVBNM1234567890"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtLabelBirthdate"
        android:layout_marginTop="30dp"
        android:text="@string/label_birthdate"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/inputPanLayout"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.helper.widget.Flow
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:flow_horizontalGap="20dp"
        app:constraint_referenced_ids="inputDateLayout,inputMonthLayout,inputYearLayout"
        app:layout_constraintTop_toBottomOf="@+id/txtLabelBirthdate" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputDateLayout"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputDate"
            android:inputType="number"
            android:maxLength="2"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputMonthLayout"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputMonth"
            android:inputType="number"
            android:maxLength="2"
            android:imeOptions="actionNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputYearLayout"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_weight="2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputYear"
            android:inputType="number"
            android:maxLength="4"
            android:imeOptions="actionDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        app:layout_constraintBottom_toTopOf="@+id/actionNext"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/txtInfoKYC"
        android:text="@string/info_kyc"
        android:textColor="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/actionNext"
        app:layout_constraintBottom_toTopOf="@+id/actionNoPan"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/button_background"
        android:text="@string/action_next"
        android:enabled="false"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/actionNoPan"
        android:text="@string/action_no_pan"
        android:textSize="16sp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <RelativeLayout
        android:id="@+id/progressBarLayout"
        android:background="#46000000"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>